# SpeakEasy

./: .gitignore  github.txt  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opus_jni.c
app/src/main/java/com/speakeasy/intercom/: Agc.kt  AudioEngine.kt  BackgroundImageView.kt  BluetoothLink.kt  Codec.kt  CrashHandler.kt  DiagnosticActivity.kt  Feedback.kt  HelpActivity.kt  IntercomService.kt  LicensesActivity.kt  OpusCodec.kt  (+13 more)
app/src/main/res/drawable/: bg_header_gradient.xml  bg_peer_battery_pill.xml  bg_sheet_handle.xml  header_overlay.xml  ic_arrow_back.xml  ic_battery.xml  ic_bluetooth.xml  ic_chevron.xml  ic_disconnect.xml  ic_headset.xml  ic_host.xml  ic_intercom.xml  ic_join.xml  ic_mic.xml  ic_more_vert.xml  ic_search.xml  ic_smartphone.xml  ic_star.xml  pb_level.xml  rtt_bar.xml  state_dot.xml
app/src/main/res/layout/: activity_diagnostic.xml  activity_help.xml  activity_licenses.xml  activity_main.xml  activity_mic_test.xml  activity_profiles.xml  activity_settings.xml  activity_wallpaper.xml  dialog_intro.xml  item_help_topic.xml  item_peer.xml  item_profile.xml  item_profile_row.xml  item_settings_switch.xml  item_wallpaper.xml  sheet_search.xml
app/src/main/res/menu/: diagnostic_menu.xml  main_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  preference_arrays.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: file_paths.xml  locales_config.xml
docs/: _config.yml  datenschutz.md  index.md  privacy.md
